--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.7",
     "morgan": "^1.10.0"
   }
 }
