--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -9,11 +9,13 @@
     "build:ui": "rm -rf build && cd ../../part2/phonebook && npm run build --prod && cp -r build ../../part3/phonebook/",
     "deploy": "git push origin master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fred White",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^7.10.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
