--- a/part8/graphql-library/package.json
+++ b/part8/graphql-library/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.18.2",
+    "dotenv": "^8.2.0",
     "gql": "^1.1.2",
+    "mongoose": "^5.10.14",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
