--- a/part9/ts-first-steps/package.json
+++ b/part9/ts-first-steps/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.14.9",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
