--- a/part9/ts-first-steps/tsconfig.json
+++ b/part9/ts-first-steps/tsconfig.json
@@ -1,1 +1,12 @@
-{ "compilerOptions": { "noImplicitAny": true } }
+{
+  "compilerOptions": {
+    "noImplicitAny": true,
+    "target": "ES2020",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true
+  }
+}
