--- a/part9/ts-first-steps/package.json
+++ b/part9/ts-first-steps/package.json
@@ -2,9 +2,11 @@
   "name": "ts-first-steps",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "ts-node": "ts-node",
+    "lint": "eslint --ext .ts .",
+    "dev": "ts-node-dev index.ts",
+    "start": "ts-node index.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,8 +14,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.9",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.14.0",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
