--- a/part9/ts-first-steps/tsconfig.json
+++ b/part9/ts-first-steps/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
-    "target": "ES2020",
-    "strict": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "strictBindCallApply": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+    "declaration": true
   }
 }
